--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ body{
     height: 5rem;
     background-color: white;
 }
+
 .fa-compass{
     color: #fe424d;
     font-size: 2rem;
@@ -113,3 +114,87 @@ body{
     height: 40px;
     width:80vh;
 }
+/*filters*/
+#filters{
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    /* background-color: aliceblue; */
+  }
+  .filter{
+    text-align: center;
+    margin-top: 2rem;
+    margin-left: .75rem;
+    margin-right: .75rem;
+    opacity: 0.7;
+    font-size: larger;
+  }
+  .filter:hover{
+    opacity:1;
+    cursor:pointer;
+  }
+  .filter p{
+    font-size:0.8rem;
+  }
+  .tax-info{
+    display:none;
+  }
+  .tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 2rem;
+    padding: .5rem;
+    margin-left: .5rem;
+    margin-top: 1.1rem;
+    display: flex;
+    align-items:center;
+  }
+
+/* signup style*/
+
+.signup-container h1{
+    /* background-color: pink; */
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
+    font-family: "Love Ya Like A Sister", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 3rem;
+}
+.signup-input b{
+    margin-left: .5rem;
+    margin-top: 5rem;
+    font-size: large;
+    font-size: 1.2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.input-div{
+    display: flex;
+}
+.icon-box{
+    font-size: 1.5rem;
+    margin: 0 .5rem;
+    border: .5px solid rgba(0, 0, 0,0.1);
+    padding: 0 .5rem;
+    border-radius: .2rem;
+}
+.signup-btn{
+    margin-left: .5rem;
+}
+/* :hover */
+@media (max-width:855px){
+    .navbar-collapse{
+        background-color: #ffffff !important; 
+        padding-left: 1rem;
+        border: 2px solid black;
+        border-radius: 1rem;
+        margin-top: 2rem;
+    }
+    .nav-link{
+        color: white;
+    }
+}
+
+
