--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,42 +4,8 @@
     <!-- <form method="get" action="/listings/new">
         <button>Create New Listing</button>
     </form>  -->
-    <style>
-      #filters{
-        display:flex;
-        flex-wrap: wrap;
-        align-items: center;
-      }
-      .filter{
-        text-align: center;
-        margin-top: 2rem;
-        margin-right: 2rem;
-        opacity: 0.7;
-        font-size: larger;
-      }
-      .filter:hover{
-        opacity:1;
-        cursor:pointer;
-      }
-      .filter p{
-        font-size:0.8rem;
-      }
-      .tax-info{
-        display:none;
-      }
-      .tax-toggle{
-        border: 1px solid black;
-        border-radius: 1rem;
-        height: 2rem;
-        padding: .5rem;
-        margin-left: 3rem;
-        margin-top: 1.1rem;
-        display: flex;
-        align-items: center;
-      }
-    
-    </style>
-    <div id="filters">
+
+    <div class="filters" id="filters">
       <div class="filter">
         <div><i class="fa-solid fa-fire"></i></div>
         <p>Trending</p>
